# s3sh

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  regression.yml  release-plz.yml
design-docs/: PARQUET_NAVIGATION_DESIGN.md  PLAN.md  PLUGIN_SYSTEM_DESIGN.md
src/: lib.rs  main.rs  ui.rs
src/archive/: mod.rs  parquet.rs  tar.rs  zip.rs
src/cache/: mod.rs
src/providers/: aws.rs  mod.rs  sourcecoop.rs
src/s3/: client.rs  metrics.rs  mod.rs  stream.rs
src/shell/: completion.rs  mod.rs
src/shell/commands/: cat.rs  cd.rs  ls.rs  mod.rs  output.rs
src/vfs/: mod.rs  node.rs  path.rs  resolver.rs
tests/: README.md  integration_s3.rs  regression_s3.rs
