[package]
name = "s3xplore"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "3xplore"
path = "src/main.rs"

[dependencies]
# AWS S3
aws-config = "1.5"
aws-sdk-s3 = "1.68"
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.9"

# Archive handling
tar = "0.4"
zip = { version = "2.2", features = ["deflate"] }
flate2 = "1.0"
bzip2 = "0.5"

# Shell/CLI
rustyline = "14.0"
colored = "2.2"
indicatif = "0.17"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Caching
lru = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
chrono = "0.4"
humansize = "2.1"
dirs = "5.0"
