[package]
name = "s3sh"
version = "0.1.2"
edition = "2024"
authors = ["Damon Cortesi <dacort@github.com>"]
description = "Interactive S3 shell with Unix-like commands and archive navigation"
license = "MIT"
repository = "https://github.com/dacort/s3sh"
homepage = "https://github.com/dacort/s3sh"
keywords = ["s3", "aws", "cli", "shell", "explorer"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[[bin]]
name = "s3sh"
path = "src/main.rs"

[dependencies]
# AWS S3
aws-config = "1.5"
aws-sdk-s3 = "1.68"
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.9"

# Archive handling
tar = "0.4"
zip = { version = "2.2", features = ["deflate"] }
flate2 = "1.0"
bzip2 = "0.5"

# Shell/CLI
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
colored = "2.2"
indicatif = "0.17"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Caching
lru = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
chrono = "0.4"
humansize = "2.1"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.15"
