[package]
name = "s3sh"
version = "0.1.2"
edition = "2024"
authors = ["Damon Cortesi <dacort@github.com>"]
description = "Interactive S3 shell with Unix-like commands and archive navigation"
license = "MIT"
repository = "https://github.com/dacort/s3sh"
homepage = "https://github.com/dacort/s3sh"
keywords = ["s3", "aws", "cli", "shell", "explorer"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[[bin]]
name = "s3sh"
path = "src/main.rs"

[features]
default = []
parquet = ["dep:parquet", "dep:object_store", "dep:arrow-schema", "dep:arrow-array", "dep:aws-credential-types"]

[dependencies]
# AWS S3
aws-config = "1.5"
aws-sdk-s3 = "1.68"
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.9"

# Archive handling
tar = "0.4"
zip = { version = "2.2", features = ["deflate"] }
flate2 = "1.0"
bzip2 = "0.5"
async-compression = { version = "0.4", features = ["tokio", "gzip", "bzip2"] }

# Shell/CLI
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
colored = "2.2"
indicatif = "0.17"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Caching
lru = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
chrono = "0.4"
humansize = "2.1"
dirs = "5.0"
serde_json = "1.0"

# Optional Parquet dependencies (feature-gated)
parquet = { version = "57.1", optional = true, default-features = false, features = ["arrow", "async", "object_store", "snap", "zstd"] }
object_store = { version = "0.12", optional = true, features = ["aws"] }
arrow-schema = { version = "57.1", optional = true }
arrow-array = { version = "57.1", optional = true }
aws-credential-types = { version = "1.2", optional = true }

[dev-dependencies]
tempfile = "3.15"
